src/scss/nav.scss
.fragment-article {
    color: white;
    background-color: #2b2b2b;
}

.top-nav {
    position: fixed;
    top: 0;
    z-index: 16;
    width: 100%;
    background-color: rgba(43, 43, 43, 0.6);
}

.navbar-brand {
    margin: 10px;
    padding: 10px;
    padding-left: 60px;
    background-image: url("img/cd.svg");
    background-size: 50px;
    background-repeat: no-repeat;
}

.top-nav-container {
    margin-left: auto;
}

.nav-button {
    color: white;
    margin: 5px;
    padding: 5px;
    list-style-type: none;
    display: inline-block;
    cursor: pointer;

    &:hover {
        color: #ffcc99;
        transition: 0.2s ease-in-out;
    }
}

.nav-basket {
    padding: 15px;
    border-radius: 60px;
    background-color: white;
    border: 1px solid #2b2b2b;
    position: relative;

    &:hover {
        background-color: #ffcc99;
    }

    .basketCounter {
        color: red;
        font-weight: bold;
        position: absolute;
        right: 10px;
        top: 35px;
    }
}

